--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,6 @@
 fixtures:
   repositories:
-    apt: 'git://git@github.com:puppetlabs/puppetlabs-apt.git'
+    apt: 'git://github.com/puppetlabs/puppetlabs-apt.git'
     stdlib: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
   symlinks:
     salt: "#{source_dir}"
